k8s/30-eureka.yaml
apiVersion: v1
kind: Service
metadata:
  name: discovery-server
  namespace: escolar
spec:
  ports:
    - port: 8761
      targetPort: 8761
  selector:
    app: discovery-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
  namespace: escolar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-server
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      nodeSelector:
        role: infra
      containers:
        - name: discovery-server
          image: escolar/discovery-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8761
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            failureThreshold: 60
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8761
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8761
            periodSeconds: 20
            failureThreshold: 5
          resources:
            requests:
              cpu: 100m
              memory: 384Mi
            limits:
              cpu: 500m
              memory: 768Mi
