k8s/50-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: escolar
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: api-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: escolar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      nodeSelector:
        role: infra
      containers:
        - name: api-gateway
          image: escolar/api-gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet: { path: /actuator/health, port: 8080 }
            failureThreshold: 120
            periodSeconds: 5
          readinessProbe:
            httpGet: { path: /actuator/health/readiness, port: 8080 }
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /actuator/health/liveness, port: 8080 }
            periodSeconds: 20
            failureThreshold: 5
          resources:
            requests: { cpu: 300m, memory: 512Mi }
            limits:   { cpu: 1500m, memory: 768Mi }
