k8s/60-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: escolar-ui
  namespace: escolar
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: escolar-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: escolar-ui
  namespace: escolar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: escolar-ui
  template:
    metadata:
      labels:
        app: escolar-ui
    spec:
      nodeSelector:
        role: infra
      containers:
        - name: ui
          image: escolar/escolar-ui:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet: { path: /, port: 80 }
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests: { cpu: 50m, memory: 64Mi }
            limits:   { cpu: 200m, memory: 128Mi }
